bluec-tests/tests/invalid/types_pointer/static_init4.c
long a[4] = {11, 22, 33, 44};
int *ptr = &a[0] * 2;

int main(void)
{
    return 0;
}
